Fixed col classes for mobile
Primarily fixed col classes that broke at 480px width and below. Added a
property that allowed word wrap in the 1-4 classes so that the heading
didn't bleed out when the word was too long. Changed the row after
declaration from content: " " to content: ""

--- a/css/main.css
+++ b/css/main.css
@@ -136,6 +136,7 @@ form a:hover {
 -------------------------------------------------------------- */
 dt, dd {
 	display: inline-block
+	
 }
 dt {
 	font-weight:100;
@@ -186,7 +187,7 @@ nav a:hover {
 }
 
 .row:after {
-	content: " ";
+	content: ""; /*changed from " ", this was how it was taught, don't know if it makes a diff*/
 	display: table;
 	clear: both;
 }
@@ -200,7 +201,6 @@ figure {
     -webkit-margin-after: 0;
     -webkit-margin-start: 0;
     -webkit-margin-end: 0;
-	margin-right: 20px;
 }
 
 [class*="col-"] {
@@ -208,8 +208,8 @@ figure {
 	padding: 0 2rem 2rem 0;
 }
 
-[class*="col-"]:last-of-type {
-	float: left;
+[class*="col-"]:last-child {
+	float: right;
 	padding-right: 0;
 }
 
@@ -231,6 +231,7 @@ figure {
 
 .col-1-4 {
 	width: 25%;
+	word-wrap: break-word; /*this makes long words not jut out of thin divs*/
 	padding-bottom: 0;
 }
 
@@ -433,5 +434,34 @@ figure {
 
 @media screen and (max-width: 768px) {
 	
+	
+}
+
+@media screen and (max-width: 480px) {
+	
+	.wrapper {
+		width: 95%;
+	}
+	
+	/*nav bar*/
+	.col-1-6 {
+		width: 25%;
+	}
+	
+	.col-3-5 {
+		width: 75%;
+	}
+	
+	/*hero heading*/
+	.col-1-2 {
+		width: 100%;	
+	}
+	
+	/*4 services*/
+	.col-1-4 {
+		width: 100%;
+		padding: 0;
+		margin-bottom: 1em;
+	}
 	
 }
